# MPointer

./: README.txt
MpointerLib/: CMakeLists.txt
MpointerLib/include/: MPointer.h  MPointer.tpp  MPointerGC.h
MpointerLib/src/: MPointerGC.cpp
